# portfolio

./: .Cargo.toml.swp  Cargo.toml  todo
.github/workflows/: portfolio.yml
blog/: .blog_post.swp  2023-09-05  2023-09-05.html  blog_post  brand_new_page  index.html  test.html  test.md  test2.html  test2.md
src/: .blog.rs.swp  .main.rs.swp  blog.rs  main.rs
static/: index.html  style.css
templates/: article.html.tera  blog.html.tera  blogpost.html.tera  header.html  home.html.tera  resume.html.tera
templates/blog/: .article.html.tera.swp  .index.html.tera.swp  index.html.tera
templates/blog/error/: 404.html.tera
templates/error/: article_fail.html.tera
