[package]
name = "rs-rocket"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
pulldown-cmark = "0.9.3"
rocket_contrib = "0.4.10"

[dependencies.rocket_dyn_templates]
features = ["tera"]
